Fixed duplicate scrollbars on messages component

--- a/src/components/Meta/meta.scss
+++ b/src/components/Meta/meta.scss
@@ -13,7 +13,6 @@
   flex: 0.5;
   flex-direction: column;
   max-height: 100vh;
-  overflow-y: scroll;
   &-header {
     border-bottom: 1px solid rgba(0, 0, 0, 0.1);
     flex-direction: row;
@@ -60,7 +59,8 @@
   &-messages {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    flex: 1;
+    height: 0%;
     padding-left: 11px;
     &-header {
       height: 34px;
@@ -71,7 +71,8 @@
       border-radius: 5px;
       display: flex;
       flex-direction: column;
-      height: 100%;
+      flex:1;
+      height: 0%;
     }
     &-filter {
       border-bottom: 1px solid rgba(0, 0, 0, 0.05);
